--- a/utilslib-tests/.project
+++ b/utilslib-tests/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>utlislib-redist</name>
+	<name>utilslib-tests</name>
 	<comment></comment>
 	<projects>
 	</projects>
