--- a/utilslib/build.xml
+++ b/utilslib/build.xml
@@ -5,14 +5,20 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="utilslib">
     <property environment="env"/>
-    <property name="ClientTest.location" value="../ClientTest"/>
-    <property name="CodeRed3.location" value="../../../CodeRed3"/>
+    <property name="AssemblyTable.location" value="../../../AssemblyTable"/>
+    <property name="BuildersToolbagNightvision.location" value="../../../BuildersToolbagNightvision"/>
+    <property name="BuildersToolbagSwapbar.location" value="../../../BuildersToolbagSwapbar"/>
+    <property name="ChatTest.location" value="../../../ChatTest"/>
+    <property name="CodeRed.location" value="../../CodeRed3/CodeRed"/>
+    <property name="CodeRedDemo.location" value="../../CodeRed3/CodeRedDemo"/>
     <property name="GuiTest.location" value="../../../GuiTest"/>
     <property name="Lunar.location" value="../../../Lunar"/>
     <property name="Lunar 1.11.2.location" value="../../../Lunar 1.11.2"/>
+    <property name="Lunar 1.11.2 - Kopie.location" value="../../../Lunar 1.11.2 - Kopie"/>
     <property name="NBTTracker.location" value="../../../NBTTracker"/>
-    <property name="ServerTest.location" value="../ServerTest"/>
     <property name="SignEditMaster.location" value="../../../SignEditMaster"/>
+    <property name="UtilsLib_API.location" value="../../../UtilsLib_API"/>
+    <property name="utilslib-exp.location" value="../utilslib-exp"/>
     <property name="utilslib-tests.location" value="../utilslib-tests"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
@@ -24,6 +30,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -42,14 +49,38 @@
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects">
-        <ant antfile="build.xml" dir="${ClientTest.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${ClientTest.location}" inheritAll="false" target="build">
+        <ant antfile="build.xml" dir="${AssemblyTable.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${AssemblyTable.location}" inheritAll="false" target="build">
             <propertyset>
                 <propertyref name="build.compiler"/>
             </propertyset>
         </ant>
-        <ant antfile="build.xml" dir="${CodeRed3.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${CodeRed3.location}" inheritAll="false" target="build">
+        <ant antfile="build.xml" dir="${BuildersToolbagNightvision.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${BuildersToolbagNightvision.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+        <ant antfile="build.xml" dir="${BuildersToolbagSwapbar.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${BuildersToolbagSwapbar.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+        <ant antfile="build.xml" dir="${ChatTest.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${ChatTest.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+        <ant antfile="build.xml" dir="${CodeRed.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${CodeRed.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+        <ant antfile="build.xml" dir="${CodeRedDemo.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${CodeRedDemo.location}" inheritAll="false" target="build">
             <propertyset>
                 <propertyref name="build.compiler"/>
             </propertyset>
@@ -72,20 +103,32 @@
                 <propertyref name="build.compiler"/>
             </propertyset>
         </ant>
+        <ant antfile="build.xml" dir="${Lunar 1.11.2 - Kopie.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${Lunar 1.11.2 - Kopie.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
         <ant antfile="build.xml" dir="${NBTTracker.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${NBTTracker.location}" inheritAll="false" target="build">
             <propertyset>
                 <propertyref name="build.compiler"/>
             </propertyset>
         </ant>
-        <ant antfile="build.xml" dir="${ServerTest.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${ServerTest.location}" inheritAll="false" target="build">
+        <ant antfile="build.xml" dir="${SignEditMaster.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${SignEditMaster.location}" inheritAll="false" target="build">
             <propertyset>
                 <propertyref name="build.compiler"/>
             </propertyset>
         </ant>
-        <ant antfile="build.xml" dir="${SignEditMaster.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${SignEditMaster.location}" inheritAll="false" target="build">
+        <ant antfile="build.xml" dir="${UtilsLib_API.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${UtilsLib_API.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+        <ant antfile="build.xml" dir="${utilslib-exp.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${utilslib-exp.location}" inheritAll="false" target="build">
             <propertyset>
                 <propertyref name="build.compiler"/>
             </propertyset>
@@ -109,15 +152,5 @@
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
-    </target>
-    <target name="Main">
-        <java classname="Main" failonerror="true" fork="yes">
-            <classpath refid="utilslib.classpath"/>
-        </java>
-    </target>
-    <target name="utilslib2">
-        <java classname="Main" failonerror="true" fork="yes">
-            <classpath refid="utilslib.classpath"/>
-        </java>
     </target>
 </project>
