--- a/utilslib/build.xml
+++ b/utilslib/build.xml
@@ -30,7 +30,6 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
-                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -152,5 +151,10 @@
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
+    </target>
+    <target name="Main (2)">
+        <java classname="Main" failonerror="true" fork="yes">
+            <classpath refid="utilslib.classpath"/>
+        </java>
     </target>
 </project>
